modified album cover css and added fixed sizing to the covers

--- a/styles/style-userpage.css
+++ b/styles/style-userpage.css
@@ -288,6 +288,7 @@ input[type=radio] {
   margin-left: 15px;
   margin-bottom: 20px;
   display:flex;
+  flex-wrap: wrap;
 }
 
 .album-cover{
